--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,6 @@
 image: Ubuntu1804 # образ для сборки
 
-stack: node 12 # окружение
+stack: node 16 # окружение
 
 branches:
   only:
@@ -15,6 +15,9 @@ build: off # отключаем встроенную в appveyor систему 
 
 build_script:
   - npm run build # команда сборки
+
+test_script:
+  - npm run lint
 
 deploy_script: # скрипт развёртывания
   - git config --global credential.helper store
