--- a/package.json
+++ b/package.json
@@ -35,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://ajoq.github.io/ra-2-events-state-2.1-filter/"
 }
